# raytracer

./: Cargo.toml  README.md
chapter02/: Cargo.toml  test.ppm
chapter02/src/: main.rs
chapter04/: Cargo.toml  test.ppm
chapter04/src/: main.rs
chapter05/: Cargo.toml
chapter05/src/: main.rs
chapter06/: Cargo.toml  test.ppm
chapter06/src/: main.rs
chapter07/: Cargo.toml  test.ppm
chapter07/src/: main.rs
chapter08/: Cargo.toml  test.ppm
chapter08/src/: main.rs
chapter09/: Cargo.toml  test.ppm
chapter09/src/: main.rs
chapter10/: Cargo.toml  test.ppm
chapter10/src/: main.rs
chapter11/: Cargo.toml  test.ppm
chapter11/src/: main.rs
examples/yaml/: cover.yaml  (+3 more)
raytracer/: Cargo.toml
raytracer/src/: camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  phong.rs  point.rs  ray.rs  transform.rs  tuples.rs  util.rs  vector.rs  world.rs
raytracer/src/intersect/: intersection.rs  mod.rs  multiple_intersections.rs
raytracer/src/parser/: file_parser.rs  mod.rs  render.rs  sample.yaml  util.rs  yaml.rs
raytracer/src/parser/attributes/: add_attribute.rs  define_attribute.rs  mod.rs  util.rs
raytracer/src/parser/objects/: camera.rs  color.rs  light.rs  material.rs  mod.rs  object.rs  pattern.rs  point.rs  shape.rs  transform.rs  vector.rs
raytracer/src/patterns/: checker.rs  dummy.rs  dummy_pattern.rs  gradient.rs  mod.rs  pattern.rs  ring.rs  stripe.rs
raytracer/src/shapes/: cone.rs  cube.rs  cylinder.rs  dummy.rs  dummy_shape.rs  group.rs  mod.rs  object.rs  plane.rs  shape.rs  sphere.rs
