[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.16"
tempfile = "3.3"
image = "0.24"
